fix dark mode autofill font color

--- a/src/global.scss
+++ b/src/global.scss
@@ -93,6 +93,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: var(--ion-color-dark);
 }
 
 .desktop-header-toolbar {
